Update
For JDK 21, Spring Boot 2.7.17